table reload传递id，默认为tableReload

--- a/application/admin/view/auth/group/edit.html
+++ b/application/admin/view/auth/group/edit.html
@@ -64,12 +64,13 @@
         ,authtree: 'authtree',
 //        ,jstree: 'jstree/dist/jstree'
 //    .link("__STATIC__/modules/jstree/dist/themes/default/style.css")
-    }).use(['jquery','index','form','element','layer','authtree'], function(){
+    }).use(['jquery','index','form','element','layer','authtree','we'], function(){
         var admin = layui.admin
             ,$ = layui.$ //重点处
             ,form = layui.form
             ,table = layui.table
             ,layer = layui.layer
+            ,we = layui.we
             ,authtree = layui.authtree;
 
         //监听提交
@@ -77,25 +78,27 @@
             var authids = authtree.getChecked('#LAY-auth-tree-index');
             var formData = data.field;
             var ids = "{$row['id']}";
+            var url = "{:url('admin/auth.group/edit','',false)}/ids/" + ids;
             formData['rules'] = authids.join(',');
-            $.ajax({
-                "url":"{:url('admin/auth.group/edit','',false)}/ids/" + ids,
-                "cache":false,
-                "data":formData,
-                "async":true,
-                "type":'post',
-                "success":function(data){
-                    layer.msg(data.info);
-                    //当你在iframe页面关闭自身时
-                    var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
-                    parent.layer.close(index); //再执行关闭
-                    //执行重载
-                },
-                "error":function (data) {
-                    layer.msg(data.info);
-                }
-            });
-            return false;
+            we.api.ajax({"url":url,"data":formData,'tableid':'tableReload'});
+//            $.ajax({
+//                "url":"{:url('admin/auth.group/edit','',false)}/ids/" + ids,
+//                "cache":false,
+//                "data":formData,
+//                "async":true,
+//                "type":'post',
+//                "success":function(data){
+//                    layer.msg(data.info);
+//                    //当你在iframe页面关闭自身时
+//                    var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
+//                    parent.layer.close(index); //再执行关闭
+//                    //执行重载
+//                },
+//                "error":function (data) {
+//                    layer.msg(data.info);
+//                }
+//            });
+//            return false;
         });
         var id = "{$row['id']}";
         var pid = "{$row['pid']}";
