--- a/application/admin/view/auth/group/index.html
+++ b/application/admin/view/auth/group/index.html
@@ -6,7 +6,7 @@
         <div class="layui-col-md12">
             <div class="layui-card">
                 <div class="layui-card-body">
-                    <table class="layui-hide" id="group" lay-filter="group"></table>
+                    <table class="layui-hide" id="group" lay-filter="group" table-reload-id="tableReload"></table>
                 </div>
             </div>
         </div>
@@ -53,7 +53,7 @@
             elem: '#group'
             ,skin:'line'
             ,url:"{:url('Admin/auth.group/index')}"
-            ,id: 'testReload'
+            ,id: 'tableReload'
             ,cols: [[
                 {type:'checkbox', fixed: 'left'}
                 ,{field:'name', title: '角色名称', sort: true}
