--- a/application/admin/view/auth/rule/edit.html
+++ b/application/admin/view/auth/rule/edit.html
@@ -82,33 +82,25 @@
         //监听提交
         form.on('submit(formRule)', function(data){
             var formData = JSON.stringify(data.field);
-            var ids = "{$row['id']}";
-//            layer.msg(formData);
-            we.api.ajax({"url":"{:url('admin/auth.rule/edit','',false)}","data":data.field});
-            return false;
-            $.ajax({
-                "url":"{:url('admin/auth.rule/edit','',false)}",
-                "cache":false,
-                "data":data.field,
-                "async":true,
-                "type":'post',
-                "success":function(data){
-                    layer.msg(data.info);
-                    //当你在iframe页面关闭自身时
-                    var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
-                    parent.layer.close(index); //再执行关闭
-                    console.log('关闭layer');
-//                    window.parent.location.reload();
-//                    parent.table.reload('testReload', {});
-                    parent.layui.table.reload('testReload');
-                    //执行重载
-//                    location.reload();
-                },
-                "error":function (data) {
-                    layer.msg(data.info);
-                }
-            });
-            return false;
+            we.api.ajax({"url":"{:url('admin/auth.rule/edit','',false)}","data":data.field,'tableid':'tableReload'});
+//            $.ajax({
+//                "url":"{:url('admin/auth.rule/edit','',false)}",
+//                "cache":false,
+//                "data":data.field,
+//                "async":true,
+//                "type":'post',
+//                "success":function(data){
+//                    layer.msg(data.info);
+//                    var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
+//                    parent.layer.close(index); //再执行关闭
+//                    console.log('关闭layer');
+//                    parent.layui.table.reload('testReload');
+//                },
+//                "error":function (data) {
+//                    layer.msg(data.info);
+//                }
+//            });
+
         });
     });
 </script>
