--- a/application/admin/view/auth/rule/index.html
+++ b/application/admin/view/auth/rule/index.html
@@ -6,7 +6,7 @@
         <div class="layui-col-md12">
             <div class="layui-card">
                 <div class="layui-card-body">
-                    <table class="layui-hide" id="rule" lay-filter="rule" table-reload-id="testReload1"></table>
+                    <table class="layui-hide" id="rule" lay-filter="rule" table-reload-id="tableReload"></table>
                 </div>
             </div>
         </div>
@@ -51,7 +51,7 @@
             elem: '#rule'
             ,height: 500
             ,url:"{:url('Admin/auth.rule/getRule')}"
-            ,id : 'testReload1'
+            ,id : 'tableReload'
             ,cols: [[
                 {type:'checkbox', fixed: 'left'}
                 ,{field:'id', title: 'ID', sort: true}
