--- a/application/admin/view/auth/rule/index.html
+++ b/application/admin/view/auth/rule/index.html
@@ -26,7 +26,7 @@
 
 <!--操作-->
 <script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-xs layui-btn-normal layui-btn-radius" lay-event="view">查看</a>
+    <a class="layui-btn layui-btn-xs layui-btn-view layui-btn-radius" lay-event="view">查看</a>
     <a class="layui-btn layui-btn-xs layui-btn-radius" lay-event="edit">编辑</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs layui-btn-radius" lay-event="del">删除</a>
 </script>
