--- a/application/admin/view/auth/group/index.html
+++ b/application/admin/view/auth/group/index.html
@@ -6,20 +6,22 @@
         <div class="layui-col-md12">
             <div class="layui-card">
                 <div class="layui-card-body">
-                    <table class="layui-hide" id="group" lay-filter="group" table-reload-id="tableReload"></table>
+                    <div class="layui-btn-group demoTable">
+                        <button class="layui-btn" data-type="addGroup"><i class="layui-icon layui-icon-add-1"></i> 添加角色</button>
+                    </div>
+                    <table class="layui-hide" id="group"  lay-filter="group" table-reload-id="tableReload"></table>
                 </div>
             </div>
         </div>
     </div>
 </div>
 </div>
-
 <!--工具栏-->
-<script type="text/html" id="toolbar">
-    <div class="layui-btn-container">
-        <button class="layui-btn layui-btn-sm" lay-event="add"><i class="layui-icon layui-icon-add-1"></i> 添加角色</button>
-    </div>
-</script>
+<!--<script type="text/html" id="toolbar">-->
+    <!--<div class="layui-btn-container">-->
+        <!--<button class="layui-btn layui-btn-sm" lay-event="add"><i class="layui-icon layui-icon-add-1"></i> 添加角色</button>-->
+    <!--</div>-->
+<!--</script>-->
 <!--工具栏-->
 
 <!--状态-->
@@ -60,7 +62,7 @@
         table.render({
             elem: '#group'
             ,skin:'line'
-            ,toolbar: '#toolbar'
+//            ,toolbar: '#toolbar'
             ,url:"{:url('Admin/auth.group/index')}"
             ,id: 'tableReload'
             ,cols: [[
@@ -92,6 +94,19 @@
 //                    layer.alert(JSON.stringify(data));
 //                    break;
 //            };
+        });
+
+        var $ = layui.$, active = {
+            addGroup: function(){ //获取选中数据
+                var checkStatus = table.checkStatus('group')
+                    ,data = checkStatus.data;
+                layer.alert(JSON.stringify(checkStatus));
+            }
+        };
+
+        $('.demoTable .layui-btn').on('click', function(){
+            var type = $(this).data('type');
+            active[type] ? active[type].call(this) : '';
         });
 
         /*form.on('submit(formRule)', function(data){
