--- a/application/admin/view/auth/group/index.html
+++ b/application/admin/view/auth/group/index.html
@@ -34,7 +34,7 @@
 <!--操作-->
 <script type="text/html" id="barDemo">
     {{# if(d.rules != '*'){  }}
-    <a class="layui-btn layui-btn-xs layui-btn-radius" lay-event="edit">编辑</a>
+    <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
     {{# }  }}
 </script>
 {/block}
