默认超级管理员

--- a/application/admin/view/auth/rule/edit.html
+++ b/application/admin/view/auth/rule/edit.html
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">名称</label>
+                <label class="layui-form-label">规则</label>
                 <div class="layui-input-block">
                     <input type="text" name="name" lay-verify="name" autocomplete="off" value="{$list['name']}" placeholder="规则名称" class="layui-input">
                 </div>
