--- a/application/admin/view/auth/rule/index.html
+++ b/application/admin/view/auth/rule/index.html
@@ -99,7 +99,6 @@
                     title:'温馨提示',
                 }, function(index){
                     we.api.ajax({"url":"{:url('admin/auth.rule/del')}","data":{'ids':data.id},'tableid':'tableReload','action':'del'});
-                    obj.del();
                     layer.close(index);
                 });
             } else if(obj.event === 'view'){
@@ -116,18 +115,34 @@
             var checkStatus = table.checkStatus(obj.config.id);
             switch(obj.event){
                 case 'add':
-                    var data = checkStatus.data;
-                    layer.alert(JSON.stringify(data));
+//                    var data = checkStatus.data;
+//                    layer.alert(JSON.stringify(data));
+                    var url = "{:url('admin/auth.rule/edit','',false)}";
+                    we.api.open(url,'添加规则');
                     break;
                 case 'del':
                     var data = checkStatus.data;
-                    layer.msg('选中了：'+ data.length + ' 个');
+                    var idsArr = [];
+                    if(data != "") {
+                        $.each(data,function (index, value) {
+                            idsArr.push(value.id);
+                        });
+                        layer.confirm('真的删除行么',{
+                            skin: 'layui-layer-we',
+                            title:'温馨提示',
+                        }, function(index){
+                            we.api.ajax({"url":"{:url('admin/auth.rule/del')}","data":{'ids':idsArr.join(',')},'tableid':'tableReload','action':'del'});
+                            layer.close(index);
+                        });
+                    } else {
+                        toastr.error('没有选择数据');
+                    }
                     break;
                 case 'export':
-                    layer.msg(checkStatus.isAll ? '全选': '未全选');
+                    toastr.warning('功能正在完善');
                     break;
                 case 'import':
-                    layer.msg(checkStatus.isAll ? '全选': '未全选');
+                    toastr.warning('功能正在完善');
                     break;
             };
         });
