--- a/application/admin/view/auth/group/index.html
+++ b/application/admin/view/auth/group/index.html
@@ -47,11 +47,12 @@
     }).extend({
         index: 'lib/index' //主入口模块
         ,we: 'we',
-    }).use(['jquery','index','table','element','we'], function(){
+    }).use(['jquery','index','table','element','we','weTable'], function(){
         var admin = layui.admin
             ,element = layui.element
             ,$ = layui.$ //重点处
             ,table = layui.table
+            ,weTable = layui.weTable
             ,layer = layui.layer
             ,form = layui.form
             ,we = layui.we;
@@ -72,29 +73,47 @@
             ]]
         });
 
-        //监听行工具事件
-        table.on('tool(group)', function(obj){
-            var data = obj.data;
-             if(obj.event === 'edit') {
-                var url = "{:url('admin/auth.group/edit','',false)}/ids/" + data.id;
-                we.api.open(url,'编辑');
+        /**
+         * 表格初始化
+         */
+        weTable.api.init({
+            table : "group",
+            tableid : "tableReload",
+            extend : {
+                "add_url": "{:url('admin/auth.group/edit','',false)}",
+                "edit_url": "{:url('admin/auth.group/edit','',false)}/ids/",
             }
         });
 
-        //头工具栏事件
-        table.on('toolbar(group)', function(obj){
-            if(obj.event == 'add') {
-                var url = "{:url('admin/auth.group/add','',false)}";
-                we.api.open(url, '添加角色');
-            }
-//            var checkStatus = table.checkStatus(obj.config.id);
-//            switch(obj.event){
-//                case 'add':
-//                    var data = checkStatus.data;
-//                    layer.alert(JSON.stringify(data));
-//                    break;
-//            };
-        });
+        /**
+         * 绑定监听事件
+         * */
+        weTable.api.bindevent();
+
+
+//        //监听行工具事件
+//        table.on('tool(group)', function(obj){
+//            var data = obj.data;
+//             if(obj.event === 'edit') {
+//                var url = "{:url('admin/auth.group/edit','',false)}/ids/" + data.id;
+//                we.api.open(url,'编辑');
+//            }
+//        });
+//
+//        //头工具栏事件
+//        table.on('toolbar(group)', function(obj){
+//            if(obj.event == 'add') {
+//                var url = "{:url('admin/auth.group/add','',false)}";
+//                we.api.open(url, '添加角色');
+//            }
+////            var checkStatus = table.checkStatus(obj.config.id);
+////            switch(obj.event){
+////                case 'add':
+////                    var data = checkStatus.data;
+////                    layer.alert(JSON.stringify(data));
+////                    break;
+////            };
+//        });
 
         /*form.on('submit(formRule)', function(data){
             var frame = layer.getChildFrame('html');
