--- a/application/admin/view/auth/rule/index.html
+++ b/application/admin/view/auth/rule/index.html
@@ -50,13 +50,14 @@
         skin: 'layui-layer-we'
     }).extend({
         index: 'lib/index' //主入口模块
-    }).use(['index','table','element','form','authtree','we'], function(){
+    }).use(['index','table','element','form','authtree','we','weTable'], function(){
         var admin = layui.admin
             ,element = layui.element
             ,table = layui.table
             ,layer = layui.layer
             ,we = layui.we
             ,form = layui.form
+            ,weTable = layui.weTable
             ,toastr = layui.toastr;
 
         table.render({
@@ -90,8 +91,27 @@
             layer.tips(this.value + ' ' + this.name + '：'+ obj.elem.checked, obj.othis);
         });
 
+        /**
+         * 表格初始化
+         */
+        weTable.api.init({
+            table : "rule",
+            tableid : "tableReload",
+            extend : {
+            "add_url": "{:url('admin/auth.rule/edit','',false)}",
+            "edit_url": "{:url('admin/auth.rule/edit','',false)}/id/",
+            "view_url": "{:url('admin/auth.rule/view','',false)}/id/",
+            "del_url": "{:url('admin/auth.rule/del','',false)}",
+             }
+        });
+
+        /**
+         * 绑定监听事件
+         * */
+        weTable.api.bindevent();
+
         //监听行工具事件
-        table.on('tool(rule)', function(obj){
+       /* table.on('tool(rule)', function(obj){
             var data = obj.data;
             if(obj.event === 'del'){
                 layer.confirm('真的删除行么',{
@@ -145,7 +165,7 @@
                     toastr.warning('功能正在完善');
                     break;
             };
-        });
+        });*/
     });
 </script>
 </body>
