--- a/application/admin/view/auth/rule/edit.html
+++ b/application/admin/view/auth/rule/edit.html
@@ -31,6 +31,12 @@
                 </div>
             </div>
             <div class="layui-form-item">
+                <label class="layui-form-label">图标</label>
+                <div class="layui-input-block">
+                    <input type="icon" name="icon" placeholder="图标" value="{$list['icon']}" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item">
                 <label class="layui-form-label">权重</label>
                 <div class="layui-input-block">
                     <input type="weigh" name="weigh" placeholder="权重" value="{$list['weigh']}" autocomplete="off" class="layui-input">
