--- a/application/admin/view/common/header.html
+++ b/application/admin/view/common/header.html
@@ -7,7 +7,7 @@
             </a>
         </li>
         <li class="layui-nav-item layui-hide-xs" lay-unselect>
-            <a href="http://www.layui.com/admin/" target="_blank" title="前台">
+            <a href="javascript:;" target="_blank" title="前台">
                 <i class="layui-icon layui-icon-website"></i>
             </a>
         </li>
@@ -47,7 +47,7 @@
         </li>
         <li class="layui-nav-item" lay-unselect>
             <a href="javascript:;">
-                <cite>贤心</cite>
+                <cite>admin</cite>
             </a>
             <dl class="layui-nav-child">
                 <dd><a lay-href="set/user/info.html">基本资料</a></dd>
