--- a/application/admin/view/auth/group/index.html
+++ b/application/admin/view/auth/group/index.html
@@ -14,11 +14,12 @@
 </div>
 </div>
 <!--工具栏-->
-<script type="text/html" id="toolbar">
-    <div class="layui-btn-container">
-        <button class="layui-btn layui-btn-sm" lay-event="add"><i class="layui-icon layui-icon-add-1"></i> 添加角色</button>
-    </div>
-</script>
+{:build_toolbar('toolbar','refresh,add')}
+<!--<script type="text/html" id="toolbar">-->
+    <!--<div class="layui-btn-container">-->
+        <!--<button class="layui-btn layui-btn-sm" lay-event="add"><i class="layui-icon layui-icon-add-1"></i> 添加角色</button>-->
+    <!--</div>-->
+<!--</script>-->
 <!--工具栏-->
 
 <!--状态-->
