--- a/application/admin/view/auth/rule/index.html
+++ b/application/admin/view/auth/rule/index.html
@@ -38,11 +38,12 @@
 </script>
 
 <!--操作-->
-<script type="text/html" id="actionbar">
-    <a class="layui-btn layui-btn-xs layui-btn-view" lay-event="view"><i class="layui-icon layui-icon-file-b"></i>查看</a>
-    <a class="layui-btn layui-btn-xs" lay-event="edit"><i class="layui-icon layui-icon-edit"></i>编辑</a>
-    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del" lay-tips="删除"><i class="layui-icon layui-icon-delete"></i>删除</a>
-</script>
+{:build_actionbar()}
+<!--<script type="text/html" id="actionbar">-->
+    <!--<a class="layui-btn layui-btn-xs layui-btn-view" lay-event="view"><i class="layui-icon layui-icon-file-b"></i>查看</a>-->
+    <!--<a class="layui-btn layui-btn-xs" lay-event="edit"><i class="layui-icon layui-icon-edit"></i>编辑</a>-->
+    <!--<a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del"><i class="layui-icon layui-icon-delete"></i>删除</a>-->
+<!--</script>-->
 {/block}
 
 {block name="script"}
@@ -77,7 +78,7 @@
                 ,{field:'ismenu', title: '是否为菜单', sort: true,templet: '#switchIsmenu'}
                 ,{field:'status', title: '状态',templet: '#switchStatus', sort: true}
                 ,{field:'name', title: '规则', minWidth: 150}
-                ,{fixed: 'right', title:'操作', toolbar: '#actionbar', width:200}
+                ,{fixed: 'right', title:'操作', toolbar: '#actionbar', width:220}
             ]]
             ,page: {
                 layout: ['limit', 'count', 'prev', 'page', 'next', 'skip'] //自定义分页布局
