--- a/application/admin/view/auth/admin/index.html
+++ b/application/admin/view/auth/admin/index.html
@@ -101,7 +101,7 @@
             table : "rule",
             tableid : "tableReload",
             extend : {
-                "add_url": "{:url('admin/auth.admin/edit','',false)}",
+                "add_url": "{:url('admin/auth.admin/add','',false)}",
                 "edit_url": "{:url('admin/auth.admin/edit','',false)}/ids/",
                 "view_url": "{:url('admin/auth.admin/view','',false)}/ids",
                 "del_url": "{:url('admin/auth.admin/del','',false)}",
