--- a/application/admin/view/auth/admin/edit.html
+++ b/application/admin/view/auth/admin/edit.html
@@ -39,7 +39,7 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">确认密码</label>
                 <div class="layui-input-block">
-                    <input type="confirm_password" name="confirm_password" placeholder="确认密码"  autocomplete="off" class="layui-input">
+                    <input type="password" name="confirm_password" placeholder="确认密码"  autocomplete="off" class="layui-input">
                 </div>
             </div>
             <div class="layui-form-item">
